centered text in instructor-show

--- a/app/views/instructors/show.html.erb
+++ b/app/views/instructors/show.html.erb
@@ -13,7 +13,7 @@
       <%# <div class="car_type_block"> %>
       <div class="w-100">
 
-        <div style="margin-top: 250px;">
+        <div style="margin-top: 250px; text-align: center;">
           <h1><%= @instructor.company_name %></h1>
           <h3 class="left-align">Can Teach:</h3>
           <% @instructor.car_type.each do |car_type| %>
