added padding-bottom to bookings/index

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -16,7 +16,7 @@
       </div>
     </div>
   <% else %>
-    <div class="col-12 container-form", style="background-color:#56CCF2">
+    <div class="col-12 container-form", style="background-color:#56CCF2; padding-bottom: 60px;">
       <h1 class="text-center py-4", style="color:#FFFFFF; font-size:30px;"><strong>All Bookings</strong></h1>
                 <% @bookings.each do |booking| %>
                   <div class="row mb-4 justify-content-center">
