change color and size title

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid d-flex align-items-center justify-content-center" style="height: 100vh;">
   <div class="col-10 col-sm-8 col-md-6 col-lg-4 container-form" style="background-color: #56CCF2;">
-    <h1 class="text-center py-4" style="color: #FFFFFF;">New Booking</h1>
+    <h1 class="text-center py-4" style="color: #FFFFFF; font-size: 30px">New Booking</h1>
 
     <%= simple_form_for([@instructor, @booking], data: { controller: 'flatpickr' }) do |f| %>
       <div class="row mb-4">
