--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -6,10 +6,12 @@
   <% if @booking.review.present? %>
     <p>A review has already been submitted for this booking.</p>
   <% else %>
+    <div style="font-size: 18px">
       <%= simple_form_for [@booking, @review] do |f| %>
         <%= f.input :description, label: "Describe your experience" %>
         <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience" %>
         <%= f.submit class: "btn btn-primary", value: "Create Review" %>
       <% end %>
+    </div>
   <% end %>
 </div>
