modified instructor show

--- a/app/assets/stylesheets/pages/_instructor_index.scss
+++ b/app/assets/stylesheets/pages/_instructor_index.scss
@@ -70,3 +70,7 @@
   text-shadow: 1px 1px 0 black;
 }
 
+// .custom-decoration-none {
+//   text-decoration: none;
+//   text-decoration-line: none;
+// }
