--- a/app/views/instructors/index.html.erb
+++ b/app/views/instructors/index.html.erb
@@ -1,4 +1,3 @@
-
 <div class="container--instructors">
   <div class="justify-content-center">
     <br>
@@ -36,8 +35,8 @@
                 <%= image_tag 'user.svg', class: "avatar-large" %>
               <% end %>
               <div class="card-body">
-                <h5 class="card-title text-center"><%= instructor.company_name %></h5>
-                <p class="text-title text-center"><%= instructor.address %></p>
+                <h4 class="card-title text-center"><%= instructor.company_name %></h4>
+                <p class="text-title text-center text-decoration-none"><%= instructor.address %></p>
               </div>
             </div>
           </a>
