--- a/app/views/instructors/show.html.erb
+++ b/app/views/instructors/show.html.erb
@@ -10,21 +10,19 @@
     </p>
   </div>
   <div class="center">
-      <%# <div class="car_type_block"> %>
-      <div class="w-100">
-
-        <div style="margin-top: 250px; text-align: center;">
-          <h1><%= @instructor.company_name %></h1>
-          <h3 class="left-align">Can Teach:</h3>
-          <% @instructor.car_type.each do |car_type| %>
-            <p> <%= car_type %> </p>
-          <% end %>
-          <h3 class="left-align">Contact Details:</h3>
-          <p><%= @instructor.work_phone_number %></p>
-          <h3 class="left-align">Location:</h3>
-          <p><%= @instructor.address %></p>
-        </div>
-     </div>
+    <div class="box">
+      <div style="margin-top: 250px; text-align: center;">
+        <h1><%= @instructor.company_name %></h1>
+        <h3 class="left-align">Can Teach:</h3>
+        <% @instructor.car_type.each do |car_type| %>
+          <p> <%= car_type %> </p>
+        <% end %>
+        <h3 class="left-align">Contact Details:</h3>
+        <p><%= @instructor.work_phone_number %></p>
+        <h3 class="left-align">Location:</h3>
+        <p><%= @instructor.address %></p>
+      </div>
+    </div>
     <div style="width: 100%; height: 250px; border-radius:5px"
       data-controller="map"
       data-map-markers-value="<%= @markers.to_json %>"
