--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,5 +1,5 @@
 <div style="position:relative; padding:16px; margin-bottom:32px;">
-  <% if Booking.count < 1 %>
+  <% if @bookings.count < 1 %>
     <div class="col-11 container-form", style="background-color:#56CCF2">
       <h1 class="text-center py-4", style="color:#FFFFFF; font-size:30px;"><strong>All Bookings</strong></h1>
       <div class="row justify-content-center">
