--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -5,7 +5,7 @@
       <div class="row justify-content-center">
         <div class="col-sm-8 mt-4" style="height:200px;">
           <div class="no-results-message pb-0 mx-4", style="text-align:center">
-            <p>You have no bookings. To add one click on the button below and choose from our selection of instructors.</p>
+            <p>You have no bookings. To add one click on the button below and choose from our instructors.</p>
           </div>
         </div>
       </div>
