--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -1,4 +1,5 @@
 <div class="container--status">
+ <img src="https://res.cloudinary.com/dblraorbo/image/upload/v1687453214/Drive%20Guru/checked.png" class="img-success" alt="">
   <h1>Payment Successful</h1>
   <form class="row g-3">
     <div class="card text-center">
