added button to 404 page

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -46,5 +46,11 @@
                 <% end %>
     </div>
     <p><%= link_to "Instructors", instructors_path, class: "button-instructors" %></p>
+    <%= link_to "/404.html" do %>
+      <img src="https://res.cloudinary.com/dblraorbo/image/upload/v1687454884/Drive%20Guru/question-mark.png" class="img-easter-egg" alt="">
+    <% end %>
   <% end %>
+  <br>
+  <br>
+  <br>
 </div>
