modified 404 loading time to 4 sec.

--- a/app/views/instructors/index.html.erb
+++ b/app/views/instructors/index.html.erb
@@ -36,7 +36,7 @@
               <% end %>
               <div class="card-body">
                 <h4 class="card-title text-center"><%= instructor.company_name %></h4>
-                <p class="text-title text-center text-decoration-none"><%= instructor.address %></p>
+                <p class="text-title text-center address"><%= instructor.address %></p>
               </div>
             </div>
           </a>
@@ -44,4 +44,6 @@
       <% end %>
     </div>
   <% end %>
+  <br>
+  <br>
 </div>
