--- a/app/assets/stylesheets/pages/_instructor_index.scss
+++ b/app/assets/stylesheets/pages/_instructor_index.scss
@@ -31,12 +31,6 @@
   color: #721c24;
 }
 
-
-// .search-form {
-//   margin-top: 20px;
-//   margin-bottom: 20px;
-// }
-
 .search-bar {
   padding: 10px;
 }
@@ -70,7 +64,6 @@
   text-shadow: 1px 1px 0 black;
 }
 
-// .custom-decoration-none {
-//   text-decoration: none;
-//   text-decoration-line: none;
-// }
+.card-body .address {
+  text-decoration: none;
+}
